fix end of match battle report bug

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="Logger.js"></script>
 
   </head>
-  <body bgcolor="transparent" style="color:white">
+  <body bgcolor="transparent" style="color:black">
     <div id="wrapper">
   	<div id="div1" style="color:blue">Sky Wars Battle simulator</div>
     <br>
@@ -21,6 +21,75 @@
   		Fatality percent: <input type="text" name="fatalityPercent" value="13"/>
   		Accuracy: <input type="text" name="accuracy" value="0"/><br>
   		Troops Types: <input type="text" name="troop1" value="infantry"/><input type="text" name="troop2" value="archers"/><input type="text" name="troop3" value="cavalry"/><input type="text" name="troop4" value="mage"/><input type="text" name="troop5" value="seals"/>
+      <br>
+      <br>
+      <text style="color:brown"> --------------------------- Armies: ------------------------------------</text>
+      <br><br>
+      <text style="color:brown">Attacker's Army: </text> 
+      <br>
+      Infantry: T1: <input type="text" name="attInfantryT1" value="0"/> 
+                T2: <input type="text" name="attInfantryT2" value="0"/>
+                T3: <input type="text" name="attInfantryT3" value="9000"/>
+                T4: <input type="text" name="attInfantryT4" value="0"/>
+                T5: <input type="text" name="attInfantryT5" value="0"/>
+      <br>
+      Archers:  T1: <input type="text" name="attArchersT1" value="0"/> 
+                T2: <input type="text" name="attArchersT2" value="0"/>
+                T3: <input type="text" name="attArchersT3" value="6000"/>
+                T4: <input type="text" name="attArchersT4" value="0"/>
+                T5: <input type="text" name="attArchersT5" value="0"/>
+      <br>
+      Cavalry:  T1: <input type="text" name="attCavalryT1" value="0"/> 
+                T2: <input type="text" name="attCavalryT2" value="0"/>
+                T3: <input type="text" name="attCavalryT3" value="0"/>
+                T4: <input type="text" name="attCavalryT4" value="0"/>
+                T5: <input type="text" name="attCavalryT5" value="0"/>
+      <br>
+      Mage:     T1: <input type="text" name="attMageT1" value="0"/> 
+                T2: <input type="text" name="attMageT2" value="0"/>
+                T3: <input type="text" name="attMageT3" value="0"/>
+                T4: <input type="text" name="attMageT4" value="0"/>
+                T5: <input type="text" name="attMageT5" value="0"/>
+      <br>
+      Seals:    T1: <input type="text" name="attSealsT1" value="0"/> 
+                T2: <input type="text" name="attSealsT2" value="0"/>
+                T3: <input type="text" name="attSealsT3" value="0"/>
+                T4: <input type="text" name="attSealsT4" value="0"/>
+                T5: <input type="text" name="attSealsT5" value="0"/>
+
+      <br><br>
+      <text style="color:brown">Defender's Army: </text> 
+      <br>
+      Infantry: T1: <input type="text" name="defInfantryT1" value="60"/> 
+                T2: <input type="text" name="defInfantryT2" value="300"/>
+                T3: <input type="text" name="defInfantryT3" value="3000"/>
+                T4: <input type="text" name="defInfantryT4" value="0"/>
+                T5: <input type="text" name="defInfantryT5" value="0"/>
+      <br>
+      Archers:  T1: <input type="text" name="defArchersT1" value="0"/> 
+                T2: <input type="text" name="defArchersT2" value="0"/>
+                T3: <input type="text" name="defArchersT3" value="0"/>
+                T4: <input type="text" name="defArchersT4" value="0"/>
+                T5: <input type="text" name="defArchersT5" value="0"/>
+      <br>
+      Cavalry:  T1: <input type="text" name="defCavalryT1" value="0"/> 
+                T2: <input type="text" name="defCavalryT2" value="0"/>
+                T3: <input type="text" name="defCavalryT3" value="0"/>
+                T4: <input type="text" name="defCavalryT4" value="0"/>
+                T5: <input type="text" name="defCavalryT5" value="0"/>
+      <br>
+      Mage:     T1: <input type="text" name="defMageT1" value="0"/> 
+                T2: <input type="text" name="defMageT2" value="0"/>
+                T3: <input type="text" name="defMageT3" value="0"/>
+                T4: <input type="text" name="defMageT4" value="0"/>
+                T5: <input type="text" name="defMageT5" value="0"/>
+      <br>
+      Seals:    T1: <input type="text" name="defSealsT1" value="0"/> 
+                T2: <input type="text" name="defSealsT2" value="0"/>
+                T3: <input type="text" name="defSealsT3" value="0"/>
+                T4: <input type="text" name="defSealsT4" value="0"/>
+                T5: <input type="text" name="defSealsT5" value="0"/>
+
       <br>
       <br>
       <text style="color:brown">Troops RPS</text>
@@ -113,74 +182,6 @@
                 T5: <input type="text" name="mightCoSealsT5" value="0"/>
       <br>
       <br>
-      <text style="color:brown"> --------------------------- Armies: ------------------------------------</text>
-      <br><br>
-      <text style="color:brown">Attacker's Army: </text> 
-      <br>
-      Infantry: T1: <input type="text" name="attInfantryT1" value="0"/> 
-                T2: <input type="text" name="attInfantryT2" value="0"/>
-                T3: <input type="text" name="attInfantryT3" value="9000"/>
-                T4: <input type="text" name="attInfantryT4" value="0"/>
-                T5: <input type="text" name="attInfantryT5" value="0"/>
-      <br>
-      Archers:  T1: <input type="text" name="attArchersT1" value="0"/> 
-                T2: <input type="text" name="attArchersT2" value="0"/>
-                T3: <input type="text" name="attArchersT3" value="6000"/>
-                T4: <input type="text" name="attArchersT4" value="0"/>
-                T5: <input type="text" name="attArchersT5" value="0"/>
-      <br>
-      Cavalry:  T1: <input type="text" name="attCavalryT1" value="0"/> 
-                T2: <input type="text" name="attCavalryT2" value="0"/>
-                T3: <input type="text" name="attCavalryT3" value="0"/>
-                T4: <input type="text" name="attCavalryT4" value="0"/>
-                T5: <input type="text" name="attCavalryT5" value="0"/>
-      <br>
-      Mage:     T1: <input type="text" name="attMageT1" value="0"/> 
-                T2: <input type="text" name="attMageT2" value="0"/>
-                T3: <input type="text" name="attMageT3" value="0"/>
-                T4: <input type="text" name="attMageT4" value="0"/>
-                T5: <input type="text" name="attMageT5" value="0"/>
-      <br>
-      Seals:    T1: <input type="text" name="attSealsT1" value="0"/> 
-                T2: <input type="text" name="attSealsT2" value="0"/>
-                T3: <input type="text" name="attSealsT3" value="0"/>
-                T4: <input type="text" name="attSealsT4" value="0"/>
-                T5: <input type="text" name="attSealsT5" value="0"/>
-
-      <br><br>
-      <text>Defender's Army: </text> 
-      <br>
-      Infantry: T1: <input type="text" name="defInfantryT1" value="60"/> 
-                T2: <input type="text" name="defInfantryT2" value="300"/>
-                T3: <input type="text" name="defInfantryT3" value="3000"/>
-                T4: <input type="text" name="defInfantryT4" value="0"/>
-                T5: <input type="text" name="defInfantryT5" value="0"/>
-      <br>
-      Archers:  T1: <input type="text" name="defArchersT1" value="0"/> 
-                T2: <input type="text" name="defArchersT2" value="0"/>
-                T3: <input type="text" name="defArchersT3" value="0"/>
-                T4: <input type="text" name="defArchersT4" value="0"/>
-                T5: <input type="text" name="defArchersT5" value="0"/>
-      <br>
-      Cavalry:  T1: <input type="text" name="defCavalryT1" value="0"/> 
-                T2: <input type="text" name="defCavalryT2" value="0"/>
-                T3: <input type="text" name="defCavalryT3" value="0"/>
-                T4: <input type="text" name="defCavalryT4" value="0"/>
-                T5: <input type="text" name="defCavalryT5" value="0"/>
-      <br>
-      Mage:     T1: <input type="text" name="defMageT1" value="0"/> 
-                T2: <input type="text" name="defMageT2" value="0"/>
-                T3: <input type="text" name="defMageT3" value="0"/>
-                T4: <input type="text" name="defMageT4" value="0"/>
-                T5: <input type="text" name="defMageT5" value="0"/>
-      <br>
-      Seals:    T1: <input type="text" name="defSealsT1" value="0"/> 
-                T2: <input type="text" name="defSealsT2" value="0"/>
-                T3: <input type="text" name="defSealsT3" value="0"/>
-                T4: <input type="text" name="defSealsT4" value="0"/>
-                T5: <input type="text" name="defSealsT5" value="0"/>
-
-
 
   		<!-- Tiers Types: <input type="text" name="t1" value="t1"/><input type="text" name="t2" value="t2"/><input type="text" name="t3" value="t3"/><input type="text" name="t4" value="t4"/><input type="text" name="t5" value="t5"/><br><br><br> -->
 	</form>
